--- a/css/home.css
+++ b/css/home.css
@@ -18,11 +18,12 @@
 }
 
 /* Carousel */
-.hero-carousel img{
+.hero-carousel .item img{
     width:100%;
     height:360px;
     object-fit:cover;
 }
+
 
 /* Welcome */
 .welcome-section{
