--- a/css/base.css
+++ b/css/base.css
@@ -78,3 +78,25 @@ img{
     font-family:'Montserrat', sans-serif;
     font-weight:600;
 }
+
+html, body{
+    height: 100%;
+}
+
+body{
+    margin: 0;
+    font-family: Arial, Helvetica, sans-serif;
+    background: #f3f5f7;
+
+    display: flex;
+    flex-direction: column;
+}
+
+main,
+.page-content{
+    flex: 1;
+}
+
+h1, h2, h3{
+    font-family: 'Montserrat', sans-serif;
+}
