--- a/css/equipements.css
+++ b/css/equipements.css
@@ -44,14 +44,14 @@ main p{
     line-height: 1.8;
 }
 
-.tennis-intro{
+.equipements{
     max-width: 1200px;
     margin: 0 auto 40px;
     background: #ffffff;
     padding: 40px 60px 60px;
 }
 
-.tennis-intro h2{
+.equipements h2{
     margin-top: 0;
     margin-bottom: 20px;
     font-size: 2.5rem;
@@ -60,28 +60,16 @@ main p{
     font-family: 'Montserrat', sans-serif;
 }
 
-.tennis-intro p{
+.equipements p{
     font-size: 1.8rem;
     line-height: 1.8;
 }
 
-.tennis-intro figure{
+.equipements figure{
     margin: 30px auto 0;
     text-align: center;
 }
 
-.tennis-intro img{
-    max-width: 100%;
-    height: auto;
-    border-radius: 6px;
-}
-
-.tennis-intro figcaption{
-    margin-top: 10px;
-    font-size: 1.3rem;
-    font-style: italic;
-    color: #555;
-}
 
 @media (max-width: 768px){
 
