--- a/css/base.css
+++ b/css/base.css
@@ -13,6 +13,7 @@ body{
     font-family: Arial, Helvetica, sans-serif;
     background:var(--color-bg);
     color:var(--color-text);
+    padding-top: var(--header-height);
 }
 
 h1, h2, h3{
