--- a/css/base.css
+++ b/css/base.css
@@ -82,3 +82,15 @@ img{
     font-family:'Montserrat', sans-serif;
     font-weight:600;
 }
+
+
+.hero img,
+.tennis-intro img,
+.welcome-section img,
+.content img,
+.sport-card img,
+.sources-main img,
+.map-section iframe,
+.video-wrapper iframe {
+    border-radius: calc(var(--box-radius) - 4px);
+}
