--- a/css/base.css
+++ b/css/base.css
@@ -118,3 +118,11 @@ main,
 .no-radius{
     border-radius: 0 !important;
 }
+
+.only-top-radius{
+    border-radius: 12px 12px 0 0;
+}
+
+.only-bottom-radius{
+    border-radius: 0 0 12px 12px;
+}
