--- a/css/basket.css
+++ b/css/basket.css
@@ -38,6 +38,9 @@
     background: #f9f9f9;
     color: #222;
     max-width: 800px;
+
+    border-radius: 16px;
+    box-shadow: 0 10px 25px rgba(0,0,0,0.08);
 }
 
 .quote footer{
