--- a/css/sport.css
+++ b/css/sport.css
@@ -6,6 +6,7 @@
     padding: 40px 60px;
     border-top: 4px solid #0ea574;
     border-bottom: 4px solid #0ea574;
+    border-radius: 16px;
 }
 
 .sport-hero h1{
