--- a/css/home.css
+++ b/css/home.css
@@ -116,3 +116,34 @@ main img{
     display: block;
     margin: 20px auto 0;
 }
+
+/* A PROPOS */
+.about-section {
+    margin: 80px 0;
+}
+
+.about-title {
+    font-weight: 700;
+    margin-bottom: 40px;
+}
+
+.about-image img {
+    width: 100%;
+    height: auto;
+}
+
+.about-caption {
+    margin-top: 15px;
+    font-size: 14px;
+    color: #333;
+}
+
+.about-text h3 {
+    font-weight: 700;
+    margin-bottom: 20px;
+}
+
+.about-text p {
+    font-size: 16px;
+    line-height: 1.6;
+}
