--- a/css/home.css
+++ b/css/home.css
@@ -119,7 +119,10 @@ main img{
 
 /* A PROPOS */
 .about-section {
-    margin: 80px 0;
+    max-width: 1200px;
+    margin: 0 auto 40px;
+    background: #ffffff;
+    padding: 40px 60px 60px;
 }
 
 .about-title {
