--- a/css/running.css
+++ b/css/running.css
@@ -26,8 +26,8 @@
 main{
     max-width: 1200px;
     margin: 0 auto 60px;
-    padding: 0 60px 60px;
-    background: #ffffff;
+    padding: 0;
+    background: transparent;
 }
 
 main h2{
